# arduino_ble_uart

./: .gitignore  CLAUDE.md  ESP32-S3-ZERO_PIN_CONNECTIONS.md  ESP32-S3.md  GEMINI.md  NIMBLE_UPGRADE.md  PIN_WIRING_DIAGRAM.txt  README.md  platformio.ini  serial_20251010_173939.txt
.github/: CHANGELOG.md  RELEASE_README.md
.github/scripts/: create-unified.sh  prepare-release.sh
.github/workflows/: release.yml
esp-idf-v6/: .gitignore  BLE_CACHE_CLEAR.md  BLE_CACHE_SOLUTION.md  BLE_DIAGNOSTIC_FULL.md  BLE_FIX_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  COMPILATION_ERRORS.md  DEFINES_FIX.md  FLASH_ERASE_GUIDE.md  FONT_INTEGRATION.md  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  MENUCONFIG_OPTIMIZATION.md  MIGRATION_NOTES.md  NORDIC_UART_ANALYSIS.md  NORDIC_UART_IMPLEMENTATION_GUIDE.md  OVERVIEW.md  QUICK_FIX.sh  QUICK_START.md  README.md  SUMMARY.md  UUID_DIAGNOSTIC_STEPS.md  VARIABLES_CHECK.md  lv_conf.h  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
esp-idf-v6/components/: lv_conf.h
esp-idf-v6/main/: CMakeLists.txt  Kconfig.projbuild  ble_service.c  common.h  config.h  display_manager.c  gps_parser.c  idf_component.yml  main.c  wifi_service.c
esp-idf-v6/main/Vernon_ST7789T/: Vernon_ST7789T.c  Vernon_ST7789T.h
esp-idf-v6/main/fonts/: README.md  roboto_condensed_20.c
include/: lv_conf.h
src/: User_Setup.h  User_Setup_Select.h  debug_main.cpp  display_test.cpp  hardware_diag.cpp  i2c_full_scan.cpp  i2c_scanner.cpp  main.cpp  main_esp8266.cpp  minimal_main.cpp  minimal_test.cpp  oled_test.cpp  simple_main.cpp  simple_test.cpp  spi_oled_test.cpp  u8g2_test.cpp
